--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ html {
 .page {
   inline-size: 1200px;
   block-size: 100%;
-  margin: auto 0;
+  margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
@@ -62,7 +62,6 @@ ol {
     "results content_details";
   padding: 0px;
   width: 1140px;
-  height: 534px;
   gap: 30px;
 }
 
@@ -75,6 +74,7 @@ ol {
 }
 
 .result__video-container {
+  position: relative;
   width: 711px;
   height: 386px;
 }
@@ -110,6 +110,7 @@ ol {
   display: flex;
   flex-direction: row;
   width: fit-content;
+  justify-content: center;
 }
 
 .search-form__label:has(:focus-visible) {
@@ -120,8 +121,8 @@ ol {
 .search-form__textfield {
   border-left: none;
   border-right: none;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border-top: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
   width: 225px;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 400;
@@ -175,7 +176,7 @@ ol {
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   background-color: transparent;
-  border: 1px solid #fff;;
+  border: 1px solid currentColor;
   height: 34px;
   cursor: pointer;
 }
@@ -193,13 +194,13 @@ ol {
 .content__details {
   grid-area: content_details;
   width: 100%;
-  overflow: hidden;
 }
 
 .content__list-container {
+  position: relative;
   height: 298px;
   overflow: scroll;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 .title {
@@ -241,18 +242,22 @@ ol {
 }
 
 .content__card-link {
+  display: block;
   text-decoration: none;
   color: #fff;
 }
 
 .content__video-card-title {
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
   margin-bottom: 6px;
+  max-width: 200px;
 }
 
 .content__video-card-description {
@@ -272,26 +277,30 @@ ol {
   white-space: nowrap;
 }
 
-.content__list-item:active,
+.content__card-link:active,
 .button:active {
   background-color: #545050;
 }
 
-.content__list-item:hover,
+.content__card-link:hover,
 .button:hover,
-.search-form__label:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline;
   cursor: pointer;
 }
 
-.content__list-item:focus,
+.content__card-link:focus,
 .search-form__textfield:focus,
 .button:focus {
   outline: none;
 }
 
-.button:focus-visible, 
-.content__list-item:focus-visible {
+.button:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 1px;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: -1px;
 }
